--- a/index.html
+++ b/index.html
@@ -1,12 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="utf-8">
+    <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-<h1>Hello World</h1>
+
+
+    <img class="b1" src="./img/Image (1).png" alt="">
+    <img class="b2" src="./img/Image (3).png" alt="">
+    <img class="b3" src="./img/Image (2).png" alt="">
+    <img class="b4" src="./img/Image (4).png" alt="">
+
+    <div class="text">Dr. Ing. h.c. F. Porsche AG — немецкий производитель премиальных спорткаров, седанов и
+        внедорожников, основанный легендарным конструктором Фердинандом Порше. Входит в состав Volkswagen Group.
+        Штаб-квартира находится в Штутгарте.
+
+        Основатель компании, Фердинанд Порше, родился 3 сентября 1875 года в городке Мафферсдорф, Богемия, в семье
+        владельца ремонтной мастерской. Он был третьим ребенком в семье, а после смерти старшего сына стал наследником
+        дела отца. С 15 лет Фердинанд работал в мастерской, а после окончания начальной школы отправился в техническое
+        училище.
+
+        В 1898 году молодой инженер получает заказ на конструирование автомобиля на электрической тяге и за несколько
+        недель создает образец — быстрый и компактный электромобиль, который мог разогнаться до 40 км/час. Единственным
+        недостатком машины был большой вес, ведь емкие свинцовые аккумуляторные батареи были очень тяжелыми. Представив
+        прототип владельцу компании Jacob Lohner, Порше сразу же получает должность главного конструктора и приступает к
+        работе над своим первым авто — Lohner-Porsche Electric Car.
+
+        В 1898 году Порше переходит в Austro-Daimler. Под его руководством рождаются легендарные модели: Sascha, ADM,
+        Prinz-Heinrich и ADR. Во время Первой мировой войны он занимается проектированием моторов для самолетов и
+        дирижаблей, а также автомобилей с гибридной силовой установкой. За инновационные разработки получает звание
+        заслуженного профессора Венского технического университета и крест «За заслуги».
+
+        В 1923 году Фердинанд начинает работать в компании Daimler-Benz AG, где руководит созданием таких спорткаров,
+        как S и SS. В 30-х годах он посещает Россию, где знакомится с работой авиационных и танковых заводов. Здесь он
+        получает предложение переехать со своим конструкторским бюро в СССР, чтобы работать в автомобильной, авиационной
+        промышленности и танкостроении. Порше отвечает отказом и возвращается в Германию, где во время Второй мировой
+        войны нацисты выпытывают у него сведения об оборудовании и технологиях, применяемых русскими в военной
+        промышленности.
+
+        В 1932 году Фердинанд Порше изобрел торсионную подвеску, используемую в дальнейшем всеми автопроизводителями.
+        После возвращения из СССР он становится главным конструктором Auto-Union и разрабатывает для компании гоночный
+        автомобиль Type 22. Следующая его работа — знаменитый «народный автомобиль» Volkswagen Beetle.
+
+        До начала Первой мировой войны Порше успевает создать первый автомобиль — Porsche 64, который станет
+        прародителем всех моделей марки. Его отличала обтекаемая форма кузова, которая выглядела совершенно иначе, чем
+        привычные автомобили тех времен. Под капотом располагался 100-сильный оппозитный мотор с воздушным охлаждением,
+        который позволял машине разгоняться до 160 км/час. Всего было изготовлено три экземпляра модели.
+    </div>
+
 </body>
+
 </html>
