--- a/index.html
+++ b/index.html
@@ -1,12 +1,128 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>MAKET_TABLE</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-<h1>Hello World</h1>
+    <table class="table">
+
+
+        <thead>
+            <tr>
+                <td colspan="2" class="header">
+                    <h1 class="title">Привет участникам соревнований!</h1>
+                </td>
+            </tr>
+        </thead>
+
+
+        <tbody>
+            <tr>
+                <td class="sidebar">
+                    <h3 class="menu-title">Виды спорта:</h3>
+                    <ul class="menu">
+                        <li class="nav">
+                            <a class="link" href="">
+                                конькобежный спорт
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                биатлон
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                футбол
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                стрельба из лука
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                прыжки в длину
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                прыжки в высоту
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                фигурное катание
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                синхронное плавание
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                шахматы
+                            </a>
+                        </li>
+                        <li class="nav">
+                            <a class="link" href="#">
+                                шашки
+                            </a>
+                        </li>
+                    </ul>
+                </td>
+
+
+                <td class="main">
+                    <h2 class="main-title">K1</h2>
+                    <img class="logo" src="./img/1.png" alt="logo">
+                    <p class="text">
+                        K-1 — японская компания, основанная в 1993 (и закрытая в 2018 году) последователем
+                        каратэ-кёкусинкай Кадзуёси Исии и занимавшаяся организацией и промоушеном кикбоксерских
+                        поединков. Компания проводит ежегодные турниры в тяжёлом весе (1993—2010, 2012), полутяжёлом
+                        весе (1993—1995), втором среднем весе (1995), первом среднем весе (2002—2010, 2012), втором
+                        полусреднем весе (2014), первом полусреднем весе (2010—2011), лёгком весе (2015), полулёгком
+                        весе (1997), юношеские турниры, а также внетурнирные бои, учредила чемпионские титулы в
+                        категориях до 100 кг и свыше 100 кг.К-1 была ведущей организацией в «японском» кикбоксинге,
+                        выведя его в лидеры профессиональных единоборств наряду с профессиональным боксом и смешанными
+                        единоборствами. Сам «японский» кикбоксинг фактически ассоциировали с К-1, с 2000-х годов термин
+                        К-1 стал чаще официально использоваться как название разновидности кикбоксинга (например, в
+                        ведущей любительской федерации WAKO).Турниры вызывали большой ажиотаж зрителей. Рекорд
+                        посещаемости был установлен 7 декабря 2002 года — на стадионе Tokyo Dome собралось 74 500
+                        любителей единоборств.[1] В 2002 году начали проводиться турниры в средней весовой категории -
+                        К-1 World Max.
+
+                        В 2011 году концерн FEG (Fighting and Entertainment Group), в собственности которого находилась
+                        К-1, обанкротился, в связи с чем проведение турниров было временно прекращено. В 2012 году К-1
+                        была возрождена новыми собственниками, однако утратила статус наиболее престижной организации в
+                        кикбоксинге после перехода большинства ведущих бойцов в голландскую Glory WS.
+                    </p>
+                </td>
+            </tr>
+        </tbody>
+
+
+
+        <tfoot>
+            <tr>
+                <td colspan="2" class="footer">
+                    <h2 class="title">Главное не победа, а участие!</h2>
+
+                </td>
+            </tr>
+        </tfoot>
+
+
+
+    </table>
 </body>
+
 </html>
