--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <h2 class="main-title">K1</h2>
                 <picture class="logo">
                     <source media="(max-width: 320px)" srcset="./img/320.jpg">
-                    <source media="(max-width: 768px)" srcset="./img/full.jpg">
+                    <source media="(max-width: 768px)" srcset="./img/768.jpg">
                     <source media="(max-width: 1440px)" srcset="./img/full.jpg">
                     <img src='./img/full.jpg' alt='logo' />
                 </picture>
