--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>№8b</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
+
+    <div class="layout">
+
+        <div>
+            <p>
+                Dolorem unde eveniet recusandae nostrum repudiandae aliquid laborum vero distinctio facilis assumenda,
+                tempora harum dicta ipsum officia nisi. Hic cumque, maxime officia, dolorum modi expedita molestias
+                magni eum harum architecto iste amet perspiciatis est esse porro excepturi, itaque sed. Laborum tempore,
+                unde dolore ullam dolores exercitationem saepe nostrum nihil sit esse temporibus possimus non magni aut
+                accusamus quod. Tenetur voluptate quae ex autem minus officiis corrupti repellat veritatis perspiciatis.
+            </p>
+        </div>
+
+        <div class="container">
+            <img class="biohazard" src="./img/biohazard.png" alt="photo">
+            <img class="Man-and-woman" src="./img/Man-and-woman.png" alt="photo">
+            <img class="No_smoking" src="./img/No_smoking.png" alt="photo">
+            <img class="Yin_and_Yang" src="./img/Yin_and_Yang.png" alt="photo">
+        </div>
+
+
+        <div>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Molestias quis, exercitationem beatae alias
+                ullam quia quae voluptates architecto excepturi iste eius facilis, doloribus cupiditate temporibus
+                deleniti totam ea magni et nostrum. Dolorem unde eveniet recusandae nostrum repudiandae aliquid laborum
+                vero distinctio facilis assumenda, tempora harum dicta ipsum officia nisi. Hic cumque, maxime officia,
+                dolorum modi expedita molestias magni eum harum architecto iste amet perspiciatis est esse porro
+                excepturi, itaque sed. Laborum tempore, unde dolore ullam dolores exercitationem saepe nostrum nihil sit
+                esse temporibus possimus non magni aut accusamus quod. Tenetur voluptate quae ex autem minus officiis
+                corrupti repellat veritatis perspiciatis.
+            </p>
+        </div>
+
+    </div>
+
+
 </body>
+
 </html>
