--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     </div>
     <div class="overlay">
         <div class="modal">
-            <a href="">Вступить в клуб</a>
+            <a href="#">Вступить в клуб</a>
         </div>
     </div>
 
