--- a/index.html
+++ b/index.html
@@ -1,12 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>GALLERY</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
+    <div>
+        <p>Мои любимые мультфильмы:</p>
+
+        <iframe width="470" height="280" src="https://www.youtube.com/embed/zKeYIxFGxZg" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+
+        <a href="https://www.youtube.com/watch?v=zKeYIxFGxZg" target="_blank">смотреть в отдельном окне</a>
+
+
+        <iframe width="470" height="280" src="https://www.youtube.com/embed/bmwpCDvtLhQ" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+
+        <a href="https://www.youtube.com/watch?v=bmwpCDvtLhQ" target="_blank">смотреть в отдельном окне</a>
+
+
+        <iframe width="470" height="280" src="https://www.youtube.com/embed/zaMNTqhrFc8" title="YouTube video player"
+            frameborder="0"
+            allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+            allowfullscreen>
+        </iframe>
+
+        <a href="https://www.youtube.com/watch?v=zaMNTqhrFc8" target="_blank">смотреть в отдельном окне</a>
+
+    </div>
+
+
 </body>
+
 </html>
