--- a/index.html
+++ b/index.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>№9d</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
+    <div class="animation">
+    </div>
+
+    <div class="container">
+
+        <div class="animation2"></div>
+
+
+
+        <img src="./img/911.jpg" alt="picture">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat, reiciendis?</p>
+
+    </div>
 </body>
+
 </html>
