--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
         <g class="layer">
          <title>Layer 1</title>
-         <line fill="none" id="svg_4" stroke="0000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="184.423107" x2="455.576963" y1="319.807678" y2="317.884601"/>
+         <line fill="none" id="svg_4" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="184.423107" x2="455.576963" y1="319.807678" y2="317.884601"/>
          <line fill="none" id="svg_5" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="186.346184" x2="186.346184" y1="317.884601" y2="144.807671"/>
          <line fill="none" id="svg_6" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="453.653886" x2="453.653886" y1="317.884601" y2="140.961517"/>
          <line fill="none" id="svg_7" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="186.346184" x2="453.653886" y1="144.807671" y2="142.884594"/>
