--- a/index.html
+++ b/index.html
@@ -42,13 +42,16 @@
 
         <div>
             <p class="publication">Публикация:</p>
-            <form>
+            <form class="form-publication">
                 <label for="1">на сайте</label>
                 <input type="radio" name="answer" id="1">
+
                 <label for="2">в журнале</label>
                 <input type="radio" name="answer" id="2">
+
                 <label for="3">на сайте и в журнале</label>
                 <input type="radio" name="answer" id="3">
+
             </form>
         </div>
 
@@ -64,7 +67,7 @@
         <div>
             <p class="text">Текст статьи:</p>
             <form class="textarea">
-                <textarea name="text"></textarea>
+                <textarea class="textarea" name="text"></textarea>
             </form>
 
         </div>
