--- a/index.html
+++ b/index.html
@@ -8,18 +8,16 @@
     <title>№9b</title>
 </head>
 <body>
-    <svg width="640" height="480" xmlns="http://www.w3.org/2000/svg" xmlns:svg="http://www.w3.org/2000/svg">
-        <!-- Created with SVG-edit - https://github.com/SVG-Edit/svgedit-->
-        <g class="layer">
+    <svg width="800" height="600" xmlns="http://www.w3.org/2000/svg">
+        <g>
          <title>Layer 1</title>
-         <line fill="none" id="svg_4" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="184.423107" x2="455.576963" y1="319.807678" y2="317.884601"/>
-         <line fill="none" id="svg_5" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="186.346184" x2="186.346184" y1="317.884601" y2="144.807671"/>
-         <line fill="none" id="svg_6" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="453.653886" x2="453.653886" y1="317.884601" y2="140.961517"/>
-         <line fill="none" id="svg_7" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="186.346184" x2="453.653886" y1="144.807671" y2="142.884594"/>
-         <line fill="none" id="svg_8" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="186.346184" x2="322.884651" y1="142.884594" y2="37.11536"/>
-         <line fill="none" id="svg_9" stroke="#000000" stroke-dasharray="null" stroke-linecap="null" stroke-linejoin="null" stroke-width="5" x1="451.730809" x2="320.961574" y1="140.961517" y2="37.11536"/>
+         <rect stroke="#000" id="svg_1" height="278" width="545.00002" y="254.8" x="139.99998" fill="none"/>
+         <path stroke="#000" id="svg_2" d="m139.83499,254.47288l272.99998,-221.00001l272.99998,221.00001l-545.99995,0z" fill="none"/>
+         <rect id="svg_3" height="166" width="117" y="308.8" x="193" stroke="#000" fill="none"/>
+         <rect stroke="#000" id="svg_4" height="166" width="126" y="306.8" x="493" fill="none"/>
+         <ellipse ry="29" rx="33.5" id="svg_5" cy="175.8" cx="409.5" stroke="#000" fill="none"/>
         </g>
+       
        </svg>
-     
 </body>
 </html>
