--- a/index.html
+++ b/index.html
@@ -10,39 +10,31 @@
 </head>
 
 <body>
-    <div class="container">
-
+    <form>
         <h3>
             Для публикации вашей статьи заполните, пожалуйста, следующую форму:
         </h3>
 
-
         <div>
             <p class="article-name">Название статьи:</p>
-            <form>
-                <input class="input" type="text" name="name">
-            </form>
+
+            <input class="input" type="text" name="name">
         </div>
-
-
-
 
         <div>
             <p class="heading">Рубрика:</p>
-            <form>
-                <select name="list">
-                    <option value="1">программирование</option>
-                    <option value="2">компьютерная техника</option>
-                    <option value="3">графика и дизайн</option>
 
-                </select>
-            </form>
+            <select name="list">
+                <option value="1">программирование</option>
+                <option value="2">компьютерная техника</option>
+                <option value="3">графика и дизайн</option>
+            </select>
         </div>
 
 
         <div>
             <p class="publication">Публикация:</p>
-            <form class="form-publication">
+            <div class="form-publication">
                 <label for="1">на сайте</label>
                 <input type="radio" name="answer" id="1">
 
@@ -51,30 +43,23 @@
 
                 <label for="3">на сайте и в журнале</label>
                 <input type="radio" name="answer" id="3">
-
-            </form>
+            </div>
         </div>
-
 
         <div>
             <p class="comments">Разрешить комментарии:</p>
-            <form>
-                <input type="checkbox" name="name"><br>
-            </form>
+            <input type="checkbox" name="name"><br>
         </div>
-
 
         <div>
             <p class="text">Текст статьи:</p>
-            <form class="textarea">
+            <div class="textarea">
                 <textarea class="textarea" name="text"></textarea>
-            </form>
-
+            </div>
         </div>
 
         <button type="submit">Опубликовать</button>
-
-    </div>
+    </form>
 </body>
 
 </html>
